# advent-of-code

2023/: flake.nix  pyproject.toml
2023/day-01/: problem-01.py  problem-02.py
2023/day-02/: problem-01.py  problem-02.py
2023/day-03/: problem-01.py
