[tool.poetry]
name = "advent-of-code/2023"
version = "0.1.0"
description = ""
authors = ["theomantz <theo@mantz.nyc>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
